[metadata]
name = epythet
version = 0.0.41
url = https://github.com/i2mint/epythet
platforms = any
description_file = README.md
long-description = file: README.md
long_description_content_type = text/markdown
root_url = https://github.com/i2mint
description = Tools for documentation and packaging
author = Otosense
author_email = andie.phan@analog.com
license = Apache Software License
keywords =
		documentation
		publishing
copyright = 2020, Otosense
display_name = Epythet

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Sphinx==3.3.1
	commonmark
	argh==0.26.2
	sphinx-toggleprompt

[options.entry_points]
console_scripts =
	epythet = epythet:main
