[metadata]
name = epythet
version = 0.0.71
url = https://github.com/i2mint/epythet
platforms = any
description_file = README.md
long-description = file: README.md
long_description_content_type = text/markdown
root_url = https://github.com/i2mint
description = Tools for documentation and packaging
author = Otosense
author_email = andie.phan@analog.com
license = Apache Software License
keywords =
		documentation
		publishing
copyright = 2021, Otosense
display_name = Epythet

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Sphinx==3.3.1
	myst_parser>=0.15.2
	argh>=0.26.2
	commonmark>==0.9.1
	sphinx-toggleprompt>=0.0.5
	sphinx-copybutton>=0.4.0
	sphinx-rtd-theme>=1.0.0

[options.entry_points]
console_scripts =
	epythet = epythet.cli:epythet_cli

[tool:pytest]
norecursedirs =
	 _static
